# tiny-platform-game-engine

./: .gitignore  CMakeLists.txt  README.md  TODO.list
VS2015_project/: base_engine_project.sln
VS2015_project/base_engine_project/: base_engine_project.vcxproj  base_engine_project.vcxproj.filters  error_log.txt
source/: appbase.cpp  appbase.hpp  main.cpp  main.hpp
source/collections/: icollections.hpp
source/collections/images/: image.cpp  image.hpp  imagecollection.cpp  imagecollection.hpp
source/core/: error_hdlr.cpp  error_hdlr.hpp  ibase.cpp  ibase.hpp  typesdescription.hpp
source/core/graphics/: imagetypesupport.cpp  imagetypesupport.hpp  renderer.cpp  renderer.hpp  view.cpp  view.hpp  window.cpp  window.hpp
source/core/utils/: popup.cpp  popup.hpp  time.cpp  time.hpp
source/eobjects/: gameobject.cpp  gameobject.hpp
source/eobjects/components/: icomponent.hpp  position.cpp  position.hpp
source/eobjects/components/collision/: data.hpp  icollision.hpp  simplecollision.cpp  simplecollision.hpp
source/eobjects/components/collision/objects/: iobject.hpp  rect.cpp  rect.hpp
source/eobjects/components/graphics/: ipicture.hpp  simplepicture.cpp  simplepicture.hpp
source/eobjects/components/graphics/temp/: animation.cpp  animation.hpp  animation_data.cpp  animation_data.hpp
source/eobjects/components/movement/: gomove.cpp  gomove.hpp  gomoveplayerinput.cpp  gomoveplayerinput.hpp
source/game/: intro.cpp  intro.hpp  maingame.cpp  maingame.hpp  mainmenu.cpp  mainmenu.hpp  playerstate.cpp  playerstate.hpp  resources.cpp  resources.hpp
